--- a/index.html
+++ b/index.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro do Produto</title>
+    <!-- Importa o arquivo CSS para estilização -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Container principal para centralizar o conteúdo -->
     <div class="container">
+        <!-- Título da página -->
         <h1>Registro do Produto</h1>
+        <!-- Formulário para registro do produto -->
         <form id="productForm">
+            <!-- Campo para o nome do produto -->
             <label for="productName">Nome do Produto:</label>
             <input type="text" id="productName" required>
 
+            <!-- Campo para a descrição do produto -->
             <label for="productDescription">Descrição:</label>
             <textarea id="productDescription" required></textarea>
 
+            <!-- Campo para o preço do produto -->
             <label for="productPrice">Preço:</label>
             <input type="number" id="productPrice" required>
 
+            <!-- Campo para selecionar a categoria do produto -->
             <label for="productCategory">Categoria:</label>
             <select id="productCategory" required>
                 <option value="">Selecionar Categoria</option>
@@ -27,11 +35,15 @@
                 <option value="home">Cozinha</option>
             </select>
 
+            <!-- Botão para submeter o formulário -->
             <button type="submit">Registrar Produto</button>
         </form>
 
+        <!-- Div para exibir a lista de produtos cadastrados -->
         <div id="productList"></div>
     </div>
+
+    <!-- Importa o arquivo JavaScript para manipulação do DOM -->
     <script src="script.js"></script>
 </body>
 </html>
