--- a/pages/cadastro-produto/index.html
+++ b/pages/cadastro-produto/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cadastro de Produtos</title>
-  <!-- Importa o arquivo CSS para estilização -->
-  <link rel="stylesheet" href="style.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cadastro de Produtos</title>
+    <!-- Importa o arquivo CSS para estilização -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Importa a biblioteca de ícones Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  </head>
 <body>
   <!-- Container principal para centralizar o conteúdo -->
   <div class="container">
