--- a/pages/cadastro-produto/index.html
+++ b/pages/cadastro-produto/index.html
@@ -26,7 +26,7 @@
       
       <!-- Campo para o preço do produto -->
       <label for="price">Preço:</label>
-      <input type="number" id="price" required>
+      <input type="number" id="price" step="0.01" min="0" placeholder="Ex: 10.50" required>
       
       <!-- Campo para as categorias do produto -->
       <label for="categories">Categorias:</label>
